--- a/app/src/main/res/layout/fragment_familyedu_detail.xml
+++ b/app/src/main/res/layout/fragment_familyedu_detail.xml
@@ -3,38 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_num"
+                style="@style/Text_view_detail"
+                />
 
-    <TextView
-        android:id="@+id/tv_num"
-        style="@style/Text_view_detail"
-        />
+            <TextView
+                android:id="@+id/tv_area"
+                style="@style/Text_view_detail"
+                />
 
-    <TextView
-        android:id="@+id/tv_area"
-        style="@style/Text_view_detail"
-        />
+            <TextView
+                android:id="@+id/tv_sex"
+                style="@style/Text_view_detail"
+                />
 
-    <TextView
-        android:id="@+id/tv_sex"
-        style="@style/Text_view_detail"
-        />
+            <TextView
+                android:id="@+id/tv_subject"
+                style="@style/Text_view_detail"
+                />
 
-    <TextView
-        android:id="@+id/tv_subject"
-        style="@style/Text_view_detail"
-        />
+            <TextView
+                android:id="@+id/tv_require"
+                style="@style/Text_view_detail"
+                />
 
-    <TextView
-        android:id="@+id/tv_require"
-        style="@style/Text_view_detail"
-        />
-
-    <TextView
-        android:id="@+id/tv_detail"
-        style="@style/Text_view_detail"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_height="wrap_content"
-        />
-
+            <TextView
+                android:id="@+id/tv_detail"
+                style="@style/Text_view_detail"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
