--- a/app/src/main/res/layout/fragment_lost_detail.xml
+++ b/app/src/main/res/layout/fragment_lost_detail.xml
@@ -24,12 +24,7 @@
                 app:riv_selected_border_width="1px"
                 app:riv_selected_mask_color="@color/xui_config_color_gray_8" />
             <TextView
-                android:id="@+id/tv_name"
-                style="@style/Text_view_detail"
-                />
-
-            <TextView
-                android:id="@+id/tv_price"
+                android:id="@+id/tv_title"
                 style="@style/Text_view_detail"
                 />
 
@@ -39,20 +34,11 @@
                 />
 
             <TextView
-                android:id="@+id/tv_deal_way"
+                android:id="@+id/tv_detail"
                 style="@style/Text_view_detail"
                 android:paddingTop="10dp"
-                android:layout_height="wrap_content"
-                />
-
-            <TextView
-                android:id="@+id/tv_description"
-                style="@style/Text_view_detail"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
-
     </ScrollView>
 </LinearLayout>
