--- a/app/src/main/res/menu/menu_navigation_bottom.xml
+++ b/app/src/main/res/menu/menu_navigation_bottom.xml
@@ -21,17 +21,17 @@
 
     <item
         android:id="@+id/nav_news"
-        android:icon="@drawable/ic_menu_news"
+        android:icon="@drawable/ic_application"
         android:title="@string/menu_home" />
 
     <item
         android:id="@+id/nav_trending"
-        android:icon="@drawable/ic_menu_trending"
+        android:icon="@drawable/ic_icon_news"
         android:title="@string/menu_news" />
 
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_menu_person"
+        android:icon="@drawable/ic_icon_proflie"
         android:title="@string/menu_profile" />
 
 </menu>
