--- a/app/src/main/res/layout/fragment_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_recycle_view.xml
@@ -1,7 +1,9 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -15,7 +17,8 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@color/white" />
+            app:titleTextColor="@color/white"
+            android:fitsSystemWindows="false"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -25,15 +28,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:paddingTop="15dp"
-            android:id="@+id/recyclerView"
+        <com.xuexiang.xui.widget.statelayout.MultipleStatusView
+            android:id="@+id/multiple_status_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never" />
-
-
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:paddingTop="15dp"
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never" />
+        </com.xuexiang.xui.widget.statelayout.MultipleStatusView>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -46,4 +51,4 @@
         android:src="@drawable/ic_add_white_24dp"
         app:layout_behavior="@string/xui_float_behavior" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
