--- a/app/src/main/res/layout/fragment_second_hand_deatil.xml
+++ b/app/src/main/res/layout/fragment_second_hand_deatil.xml
@@ -1,58 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+android:orientation="vertical">
+
+<com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/appbar_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
-    <ScrollView
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
+    android:theme="@style/AppTheme.AppBarOverlay">
+
+    <com.google.android.material.appbar.CollapsingToolbarLayout
+        android:id="@+id/collapse_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="250dp"
+        android:fitsSystemWindows="true"
+        app:contentScrim="?attr/colorPrimary"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/app_compat_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:scaleType="centerCrop"
+            app:layout_collapseMode="parallax" />
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/appbar_layout_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin"
+            app:title="物品详情"
+            app:navigationIcon="@drawable/xui_ic_navigation_back_white"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@color/white" />
+
+
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+</com.google.android.material.appbar.AppBarLayout>
+
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fab_scrolling"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:src="@drawable/ic_share_white_24dp"
+    app:layout_anchor="@id/appbar_layout"
+    app:layout_anchorGravity="bottom|end" />
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <com.xuexiang.xui.widget.imageview.RadiusImageView
-                android:id="@+id/iv_image"
-                android:layout_marginTop="20dp"
-                android:layout_width="320dp"
-                android:layout_height="180dp"
-                android:layout_gravity="center"
-                app:riv_border_color="@color/xui_config_color_gray_6"
-                app:riv_border_width="1px"
-                app:riv_corner_radius="15dp"
-                app:riv_selected_border_color="@color/xui_config_color_gray_4"
-                app:riv_selected_border_width="1px"
-                app:riv_selected_mask_color="@color/xui_config_color_gray_8" />
             <TextView
                 android:id="@+id/tv_name"
                 style="@style/Text_view_detail"
+                android:padding="10dp"
                 />
 
             <TextView
                 android:id="@+id/tv_price"
                 style="@style/Text_view_detail"
+                android:padding="10dp"
                 />
 
             <TextView
                 android:id="@+id/tv_contactWay"
                 style="@style/Text_view_detail"
+                android:padding="10dp"
                 />
 
             <TextView
                 android:id="@+id/tv_deal_way"
                 style="@style/Text_view_detail"
-                android:paddingTop="10dp"
-                android:layout_height="wrap_content"
+                android:padding="10dp"
                 />
 
             <TextView
                 android:id="@+id/tv_description"
                 style="@style/Text_view_detail"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
 
-    </ScrollView>
-</LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
