--- a/app/src/main/res/values/styles_widget.xml
+++ b/app/src/main/res/values/styles_widget.xml
@@ -133,20 +133,11 @@
 
 
     <style name="EditInfoItem">
-        <item name="android:background">@color/xui_config_color_white</item>
+        <item name="android:background">@drawable/xui_config_bg_edittext</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">55dp</item>
-        <item name="sLeftTextSize">17sp</item>
-        <item name="sLeftTextColor">@color/xui_config_color_black</item>
-        <item name="sCenterTextColor">@color/xui_config_color_black</item>
-        <item name="sLeftViewWidth">0dp</item>
-        <item name="sCenterViewGravity">left_center</item>
-        <item name="sCenterViewMarginRight">5dp</item>
-        <item name="sDividerLineHeight">2dp</item>
-        <item name="sRightTextSize">13sp</item>
-        <item name="sRightViewMarginRight">0dp</item>
-        <item name="sUseRipple">false</item>
-        <item name="sEnableEdit">true</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@color/xui_config_color_black</item>
     </style>
 </resources>
