--- a/app/src/main/res/layout/fragment_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_recycle_view.xml
@@ -9,18 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <com.xuexiang.xui.widget.actionbar.TitleBar
-            android:id="@+id/toolbar"
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextColor="@color/white"
-            android:fitsSystemWindows="false"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:fitsSystemWindows="true"/>
     </com.google.android.material.appbar.AppBarLayout>
-
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh_layout"
@@ -32,24 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
-                android:paddingTop="15dp"
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:overScrollMode="never" />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="72dp"
-                android:src="@drawable/ic_add_white_24dp"
-                app:layout_behavior="@string/xui_float_behavior" />
+                android:overScrollMode="never"/>
         </com.xuexiang.xui.widget.statelayout.MultipleStatusView>
-
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
-
-
 </LinearLayout>
