--- a/app/src/main/res/layout/adapter_familyedu_card_viewlist_item.xml
+++ b/app/src/main/res/layout/adapter_familyedu_card_viewlist_item.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    app:cardBackgroundColor="@color/xui_config_color_white"
-    app:cardCornerRadius="8dp"
-    app:cardPreventCornerOverlap="true"
+    android:layout_marginTop="10dp"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingTop="5dp"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:background="@color/xui_config_color_white"
     app:contentPaddingTop="5dp"
     app:contentPaddingBottom="10dp"
     app:contentPaddingLeft="@dimen/activity_horizontal_margin"
     app:contentPaddingRight="@dimen/activity_horizontal_margin">
+<!--    android:id="@+id/card_view"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginStart="@dimen/activity_horizontal_margin"-->
+<!--    android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
+<!--    android:layout_marginTop="5dp"-->
+<!--    android:layout_marginBottom="5dp"-->
+<!--    app:cardBackgroundColor="@color/xui_config_color_white"-->
+<!--    app:cardCornerRadius="8dp"-->
+<!--    app:cardPreventCornerOverlap="true"-->
+
 
     <LinearLayout
         android:layout_width="match_parent"
