--- a/app/src/main/res/layout/adapter_lost_card_viewlist_item.xml
+++ b/app/src/main/res/layout/adapter_lost_card_viewlist_item.xml
@@ -4,19 +4,14 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="6dp"
     app:cardBackgroundColor="@color/xui_config_color_white"
-    app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardPreventCornerOverlap="true"
     app:contentPaddingTop="5dp"
     app:contentPaddingBottom="10dp"
     app:contentPaddingLeft="@dimen/activity_horizontal_margin"
     app:contentPaddingRight="@dimen/activity_horizontal_margin">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,6 +35,7 @@
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:singleLine="false"
+                    android:textSize="16sp"
                     android:gravity="top|start"
                     android:text="深度解析RocketMQ消息发送的高可用设计"
                     android:textColor="@color/xui_config_color_pure_black" />
