--- a/app/src/main/res/layout/adapter_team_card_viewlist_item.xml
+++ b/app/src/main/res/layout/adapter_team_card_viewlist_item.xml
@@ -1,75 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="6dp"
-    app:cardBackgroundColor="@color/xui_config_color_white"
-    app:cardCornerRadius="8dp"
-    app:cardPreventCornerOverlap="true"
-    app:contentPaddingTop="5dp"
-    app:contentPaddingBottom="10dp"
-    app:contentPaddingLeft="@dimen/activity_horizontal_margin"
-    app:contentPaddingRight="@dimen/activity_horizontal_margin">
+    android:orientation="vertical"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingTop="5dp"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:background="@color/xui_config_color_white"
+    android:paddingBottom="10dp">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.xuexiang.xui.widget.imageview.RadiusImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:srcCompat="@drawable/ic_team"
+                app:riv_is_circle="true" />
+
+
+            <TextView
+                android:id="@+id/tv_requirement"
+                style="@style/TextStyle.Explain"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginStart="4dp"
+                android:textColor="@color/xui_config_color_pure_black"
+                android:text="华南师范大学新闻网" />
+
+        </LinearLayout>
+
+
+<!--        <TextView-->
+<!--            android:id="@+id/tv_campus"-->
+<!--            style="@style/TextStyle.Explain"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:layout_gravity="end|center_vertical"-->
+<!--            android:layout_marginStart="2dp"-->
+<!--            android:layout_marginEnd="2dp"-->
+<!--            android:text="要闻" />-->
+<!--            android:background="@color/xui_config_color_50_blue"-->
+
+
+    </FrameLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_title"
                 style="@style/TextStyle.Content"
                 android:ellipsize="end"
+                android:gravity="start|center_vertical"
                 android:maxLines="2"
                 android:singleLine="false"
-                android:gravity="top|start"
-                android:text="深度解析RocketMQ消息发送的高可用设计"
-                android:textColor="@color/xui_config_color_pure_black" />
+                android:textColor="@color/xui_config_color_pure_black"
+                android:text="深度解析RocketMQ消息发送的高可用设计" />
 
             <TextView
-                android:id="@+id/tv_summary"
+                android:id="@+id/tv_detail"
                 style="@style/TextStyle.Explain"
                 android:layout_marginTop="3dp"
                 android:ellipsize="end"
-                android:gravity="bottom|start"
+                android:gravity="start|center_vertical"
                 android:maxLines="2"
                 android:singleLine="false"
-                android:text="从rocketmq topic的创建机制可知，一个topic对应有多个消息队列，那么我们在发送消息时，是如何选择消息队列进行发送的？"
-                android:textColor="?attr/xui_config_color_content_text" />
+                android:textColor="?attr/xui_config_color_content_text"
+                android:text="从rocketmq topic的创建机制可知，一个topic对应有多个消息队列，那么我们在发送消息时，是如何选择消息队列进行发送的？" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tv_time"
-                android:paddingTop="5dp"
-                style="@style/TextStyle.Explain"
-                android:layout_gravity="bottom|start"
-                android:text="发布时间" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_area"
-                style="@style/TextStyle.Explain"
-                android:paddingTop="5dp"
-                android:padding="1dp"
-                android:textColor="@color/white"
-                android:layout_gravity="bottom|end"
-                android:background="@color/xui_config_color_50_blue"
-                android:text="大学城" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_date"
+            style="@style/TextStyle.Explain"
+            android:layout_gravity="center_vertical|start"
+            android:text="时间" />
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </FrameLayout>
+
+
+</LinearLayout>
