--- a/app/src/main/res/layout/layout_main_content.xml
+++ b/app/src/main/res/layout/layout_main_content.xml
@@ -27,7 +27,7 @@
         app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
